<resources>
    <string name="app_name">InstagramClone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="_0">0</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">Username</string>
    <string name="notifications">Notifications</string>
    <string name="change_image">Change Image</string>
    <string name="full_name">Full Name</string>
    <string name="bio">Bio</string>
    <string name="logout">LogOut</string>
    <string name="delete_account">Delete Account</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
</resources>