<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment"
    android:id="@+id/relative_layout">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar_layout">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/button_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/clear"
                    android:layout_alignParentStart="true"/>

                <ImageButton
                    android:id="@+id/button_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/check"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"/>

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/edit_profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@id/app_bar_layout"
        android:src="@drawable/profile"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/button_change_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_image"
        android:background="@android:color/white"
        android:layout_below="@id/edit_profile_image"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:padding="6dp"
        />

    <LinearLayout
        android:id="@+id/layout_edit_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_change_image"
        android:orientation="vertical"
        android:padding="9dp">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            />
        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            />
        <EditText
            android:id="@+id/edit_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bio"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/layout_edit_info"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_gravity="center"
            />
        <Button
            android:id="@+id/button_delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:layout_gravity="center"/>

    </LinearLayout>
</RelativeLayout>