<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ProfileFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar_layout_profile"
        android:background="@android:color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/menu"
                    android:layout_centerInParent="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/menu_icon"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:text="@string/username"
                    android:layout_toStartOf="@id/menu_icon"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll_view"
        android:layout_below="@id/app_bar_layout_profile">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_content"
            android:padding="15dp"
            android:background="@android:color/white"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:src="@drawable/profile"
                android:id="@+id/circle_profile_image"
                android:padding="15dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts"
                android:id="@+id/text_posts"
                android:layout_centerHorizontal="true"
                android:padding="15dp"
                android:layout_toEndOf="@id/circle_profile_image"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/followers"
                android:layout_toEndOf="@id/text_posts"
                android:id="@+id/text_followers"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:id="@+id/text_following"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@id/text_followers"
                android:text="@string/following"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/number_posts"
                android:text="@string/_0"
                android:layout_toEndOf="@id/circle_profile_image"
                android:paddingStart="35dp"
                android:paddingEnd="35dp"
                android:layout_below="@id/text_posts"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/number_followers"
                android:text="@string/_0"
                android:layout_toEndOf="@id/number_posts"
                android:layout_below="@id/text_followers"
                android:paddingStart="35dp"
                android:paddingEnd="35dp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/number_following"
                android:text="@string/_0"
                android:layout_toEndOf="@id/number_followers"
                android:layout_below="@id/text_following"
                android:paddingStart="35dp"
                android:paddingEnd="35dp"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_edit_profile"
                android:layout_below="@id/number_followers"
                android:layout_toEndOf="@id/circle_profile_image"
                android:text="@string/edit_profile"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:paddingTop="1.5dp"
                android:paddingBottom="1.5dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bio_view"
                android:layout_below="@id/button_edit_profile"
                android:background="@android:color/white"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_full_name"
                    android:text="@string/full_name"
                    android:paddingStart="6dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_bio"
                    android:text="@string/bio"
                    android:layout_below="@id/text_full_name"
                    android:paddingStart="6dp"
                    android:paddingTop="3dp"
                    />
            </RelativeLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_bar_layout"
                android:layout_below="@id/bio_view"
                >

                <ImageButton
                    android:id="@+id/button_grid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:src="@drawable/grid_layout"
                    app:layout_constraintStart_toStartOf="@id/button_bar_layout"
                    app:layout_constraintEnd_toStartOf="@id/button_save"
                    app:layout_constraintTop_toTopOf="@id/button_bar_layout"
                    tools:ignore="MissingConstraints"
                    android:paddingStart="90dp"
                    android:paddingEnd="90dp"
                    android:paddingTop="9dp"
                    />

                <ImageButton
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/save"
                    android:background="@android:color/white"
                    app:layout_constraintStart_toEndOf="@id/button_grid"
                    app:layout_constraintTop_toTopOf="@id/button_bar_layout"
                    tools:ignore="MissingConstraints"
                    android:paddingStart="90dp"
                    android:paddingEnd="90dp"
                    android:paddingTop="9dp"
                    app:layout_constraintEnd_toEndOf="@id/button_bar_layout"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>